MISC: 增加faq community两个页面

--- a/carousel.css
+++ b/carousel.css
@@ -18,6 +18,11 @@ ul li {
   line-height:2.0;
 }
 
+span {
+  font-size: 16px;
+  line-height:2.0;
+}
+
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
