--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -82,6 +82,7 @@
       width: 100%;
       text-align: center;
       padding: 0 20px;
+      overflow: hidden;
       & > img {
         position: absolute;
         z-index: -1;
