--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -81,7 +81,7 @@
       box-sizing: border-box;
       width: 100%;
       text-align: center;
-      padding: 0 20px;
+      padding: 40px 20px;
       overflow: hidden;
       & > img {
         position: absolute;
