Adaptive width and height

--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -81,15 +81,13 @@
       box-sizing: border-box;
       width: 100%;
       text-align: center;
-      padding: 40px 20px;
-      overflow: hidden;
+      padding: 0 20px;
       & > img {
         position: absolute;
         z-index: -1;
         left: 0;
         top: -36px;
-        width: 1494px;
-        height: 318px;
+        width: 100%;
       }
     }
     .product-name {
