new version, please read README.md first (#88)
* feat: 新版站点

* fix: issue #14

* feat: build

* feat:  optimization for loading js

* chore: adjust build for loading js

* fix: [issue28](https://github.com/apache/incubator-dubbo-website/issues/28) not compiled

* feat: 修改hash类型，支持Google爬虫SEO

* fix: docs page sidemenu unselected

* add star icon && optimize for build

* use react github button

* add attendtion

* build

* modify README.md


Former-commit-id: 95edde865bcd982ba74608b78644e159cecbc5e6

--- a/redirect.ejs
+++ b/redirect.ejs
@@ -6,11 +6,11 @@
 <body>
   <script src="//cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 	<script>
-    window.rootPath = '';
-    window.defaultLanguage = 'en-us';
+    window.rootPath = '<%= rootPath %>';
+    window.defaultLanguage = '<%= defaultLanguage %>';
     var lang = Cookies.get('docsite_language');
     if (!lang) {
-      lang = 'en-us';
+      lang = '<%= defaultLanguage %>';
     }
     window.location = window.rootPath + '/' + lang;
   </script>
