--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -1,9 +1,11 @@
+@import '../../variables.scss';
 .button {
     box-sizing: border-box;
     display: inline-block;
     height: 48px;
     line-height: 48px;
     min-width: 140px;
+    padding: 0 12px;
     font-family: Avenir-Heavy;
     font-size: 16px;
     color: #FFF;
