feat: add google and baidu search

--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -86,7 +86,6 @@
     }
     .language-switch {
       float: right;
-      display: inline-block;
       box-sizing: border-box;
       width: 24px;
       height: 24px;
@@ -110,6 +109,80 @@
     .language-switch-normal {
       border: 1px solid #333;
       color: #333;
+    }
+    .search {
+      float: right;
+      width: 24px;
+      height: 24px;
+      margin-top: 21px;
+      margin-right: 40px;
+      line-height: normal;
+      position: relative;
+      .icon-search {
+        display: inline-block;
+        cursor: pointer;
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        border:2px solid;
+        position: relative;
+        &::before {
+          content: '';
+          transform: rotate(45deg);
+          width:8px;
+          height: 2px;
+          position: absolute;
+          top:13px;
+          left:11px;
+        }
+      }
+      &-primary {
+        .icon-search {
+          border-color: #fff;
+          opacity: 0.6;
+          &::before {
+            background-color: #fff;
+          }
+          &:hover {
+            opacity: 1;
+          }
+        }
+      }
+      &-normal {
+        .icon-search {
+          border-color: #333;
+          opacity: 0.6;
+          &::before {
+            background-color: #333;
+          }
+          &:hover {
+            opacity: 1;
+          }
+        }
+      }
+      .search-input {
+        position: absolute;
+        left: -172px;
+        top: 28px;
+        background: #fff;
+        border-radius: 4px;
+        overflow: hidden;
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.05), 0 -8px 16px 0 rgba(0, 0, 0, 0.05);
+        img {
+          width: 28px;
+          height: 28px;
+          cursor: pointer;
+          vertical-align: middle;
+        }
+        input {
+          padding: 0 4px;
+          border: none;
+          outline: none;
+          width: 160px;
+          height: 24px;
+          vertical-align: middle;
+        }
+      }
     }
   }
 }
