--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -13,7 +13,7 @@
     border-radius: 4px;
     text-decoration: none;
     &-primary {
-      background: #4190FF;
+      background: $intermediateColor;
     }
     &-normal {
       background: transparent;
