Revert "highlight stars and forks. resolve #322 (#323)"
This reverts commit 49dc2336040852fa6453081d49b84a14676104f6.

--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -130,10 +130,36 @@
     }
     .github-buttons {
       margin-top: 20px;
-	  text-align: center;
-	  a {
-		  margin-left: 20px;
-	  }
+      a {
+        margin-right: 10px;
+        margin-left: 10px;
+        img {
+          width: 16px;
+          height: 16px;
+        }
+        div {
+          border-radius: 2px;
+          display: inline-block;
+          height: 24px;
+          line-height: 24px;
+          padding-left: 5px;
+          color: #fff;
+          background: rgba(255, 255, 255, 0.2);
+          .type {
+            padding: 0 8px 0 4px;
+          }
+          .line {
+            display: inline-block;
+            box-sizing: border-box;
+            width: 1px;
+            height: 12px;
+            border-left: 1px solid rgba(255, 255, 255, 0.2);
+          }
+          .count {
+            padding: 0 14px;
+          }
+        }
+      }
     }
   }
   .introduction-section {
