feat: 主题色调整,增加start,fork相关信息

--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -13,7 +13,8 @@
     border-radius: 4px;
     text-decoration: none;
     &-primary {
-      background: $intermediateColor;
+      color: $brandColor;
+      background: #fff;
     }
     &-normal {
       background: transparent;
