--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -128,6 +128,35 @@
         margin-right: 20px;
       }
     }
+    .github-buttons {
+      margin-top: 10px;
+      a {
+        margin-right: 20px;
+        &:last-child {
+          margin-right: 0;
+        }
+        div {
+          border-radius: 2px;
+          display: inline-block;
+          height: 24px;
+          line-height: 24px;
+          font-size: 12px;
+          padding: 0 8px;
+          color: #fff;
+          background: rgba(255, 255, 255, 0.2);
+          img {
+            width: 16px;
+            height: 16px;
+            vertical-align: middle;
+          }
+          .count {
+            font-size: 16px;
+            padding-left: 4px;
+            vertical-align: middle;
+          }
+        }
+      }
+    }
   }
   .introduction-section {
     background: #F9FAFA;
