feat: 品牌色,添加字体,Safari跨域拦截导致star fork数获取失败等问题

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -5,7 +5,7 @@ $startColor: #04C0C6;
 // 渐变中间色
 $intermediateColor: #2BA3DE;
 // 渐变结束色
-$endColor: #04C0C6;
+$endColor: #835BE3;
 // 侧边菜单背景色
 $sideMenuBgColor: #f8f8f8;
 // 顶部悬浮菜单背景色，用于移动端
