--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -1,6 +1,25 @@
 @import '../../variables.scss';
 @import '../../reset.scss';
 
+$regular-icon-font-path: '../../fonts/TXD_D-Regular';
+$medium-icon-font-path: '../../fonts/TXD_D-Medium';
+
+@font-face {
+  font-family: 'TXD_D_Regular';
+  src: url("#{$regular-icon-font-path}.eot");
+  src: url("#{$regular-icon-font-path}.eot?#iefix") format("embedded-opentype"),
+    url("#{$regular-icon-font-path}.ttf") format("truetype"),
+    url("#{$regular-icon-font-path}.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'TXD_D_Medium';
+  src: url("#{$medium-icon-font-path}.eot");
+  src: url("#{$medium-icon-font-path}.eot?#iefix") format("embedded-opentype"),
+    url("#{$medium-icon-font-path}.ttf") format("truetype"),
+    url("#{$medium-icon-font-path}.woff") format("woff");
+}
+
 @keyframes fallingStar {
   0% {
       transform: translate3d(0, -100%, 0);
@@ -124,14 +143,17 @@
     .button-area {
       text-align: center;
       margin-top: 40px;
-      .button:first-child {
-        margin-right: 20px;
+      .button {
+        margin-right: 12px;
+        &:last-child {
+          margin-right: 0;
+        }
       }
     }
     .github-buttons {
-      margin-top: 10px;
+      margin-top: 20px;
       a {
-        margin-right: 20px;
+        margin-right: 12px;
         &:last-child {
           margin-right: 0;
         }
@@ -148,11 +170,14 @@
             width: 16px;
             height: 16px;
             vertical-align: middle;
+            margin-top: -6px;
           }
           .count {
+            font-family: TXD_D_Medium;
             font-size: 16px;
             padding-left: 4px;
-            vertical-align: middle;
+            display: inline-block;
+            height: 100%;
           }
         }
       }
