--- a/src/pages/ecology/index.scss
+++ b/src/pages/ecology/index.scss
@@ -120,6 +120,7 @@
                   max-height: 100%;
                 }
               }
+
             }
           }
         }
@@ -193,6 +194,9 @@
                   max-height: 100%;
                 }
               }
+             .img-title {
+                font-family: Avenir;
+              } 
             }
           }
         }
