update same imgs to words

--- a/src/pages/ecology/index.scss
+++ b/src/pages/ecology/index.scss
@@ -100,6 +100,10 @@
               color: #333;
               margin-bottom: 8px;
             }
+            .hidden-img-title {
+              font-size: 10px;
+              color: #333;
+            }
             .card-content {
               writing-mode: vertical-lr;
               .img-item {
@@ -194,9 +198,6 @@
                   max-height: 100%;
                 }
               }
-             .img-title {
-                font-family: Avenir;
-              } 
             }
           }
         }
