--- a/overrides/partials/tabs-item.html
+++ b/overrides/partials/tabs-item.html
@@ -44,8 +44,6 @@
     <li class="md-tabs__item">{{nav_item.title}}
       <ul class="md-tabs__list">
         {% for versions_nav_item in nav_item.children %}
-          {% set versions_title = versions_title | default(versions_nav_item.title) %}
-
           <!-- Recurse, if the first item has nested items -->
           {% if (versions_nav_item.children | first).children %}
           {% set nav_item = versions_nav_item.children | first %}
@@ -59,14 +57,14 @@
                       href="{{ (versions_nav_item.children | first).url | url }}"
                       class="md-tabs__link md-tabs__link--active"
               >
-                  {{ versions_title }}
+                  {{ versions_nav_item.title }}
               </a>
               {% else %}
               <a
                       href="{{ (versions_nav_item.children | first).url | url }}"
                       class="md-tabs__link"
               >
-                  {{ versions_title }}
+                  {{ versions_nav_item.title }}
               </a>
               {% endif %}
           </li>
