fix mkdocs config

--- a/overrides/partials/tabs-item.html
+++ b/overrides/partials/tabs-item.html
@@ -40,7 +40,7 @@
 <!-- Main navigation item with nested items -->
 {% elif nav_item.children and nav_item.children | length > 0 %}
   {% set title = title | default(nav_item.title) %}
-  {% if nav_item.title == 'Docs' %}
+  {% if nav_item.title == config.extra.docs_key %}
     <li class="md-tabs__item">{{nav_item.title}}
       <ul class="md-tabs__list">
         {% for versions_nav_item in nav_item.children %}
