fix nav and menu

--- a/overrides/partials/tabs-item.html
+++ b/overrides/partials/tabs-item.html
@@ -22,32 +22,11 @@
     <li class="md-tabs__item">{{nav_item.title}}
       <ul class="md-tabs__list">
         {% for versions_nav_item in nav_item.children %}
-          <li style="color:red">{{versions_nav_item.title}}</li>
           {% set versions_title = versions_title | default(versions_nav_item.title) %}
           <!-- Recurse, if the first item has nested items -->
           {% if (versions_nav_item.children | first).children %}
             {% set nav_item = versions_nav_item.children | first %}
             {% include "partials/tabs-item.html" %}
-
-          <!-- Render item -->
-          {% else %}
-          <li class="md-tabs__item">
-              {% if versions_nav_item.active %}
-              <a
-                      href="{{ (versions_nav_item.children | first).url | url }}"
-                      class="md-tabs__link md-tabs__link--active"
-              >
-                  {{ versions_title }}
-              </a>
-              {% else %}
-              <a
-                      href="{{ (versions_nav_item.children | first).url | url }}"
-                      class="md-tabs__link"
-              >
-                  {{ versions_title }}
-              </a>
-              {% endif %}
-          </li>
           {% endif %}
         {% endfor %}
       </ul>
@@ -66,14 +45,14 @@
               href="{{ (nav_item.children | first).url | url }}"
               class="md-tabs__link md-tabs__link--active"
       >
-        {{ title }}
+        {% if title == config.extra.docs_key %} {{versions_title}} {% else %} {{ title }} {% endif %}
       </a>
       {% else %}
       <a
               href="{{ (nav_item.children | first).url | url }}"
               class="md-tabs__link"
       >
-        {{ title }}
+        {% if title == config.extra.docs_key %} {{versions_title}} {% else %} {{ title }} {% endif %}
       </a>
       {% endif %}
     </li>
