replace hardcoded 'Docs'

--- a/overrides/partials/nav.html
+++ b/overrides/partials/nav.html
@@ -51,7 +51,7 @@
   <ul class="md-nav__list" data-md-scrollfix>
     {% set loopIndex = 1 %}
     {% for nav_item in nav %}
-      {% if nav_item.title == 'Docs' %}
+      {% if nav_item.title == config.extra.docs_key %}
         {% for version_nav_item in nav_item.children %}
           {% set nav_item = version_nav_item %}
           {% set path = "nav-" + loopIndex | string %}
