--- a/overrides/partials/tabs-item.html
+++ b/overrides/partials/tabs-item.html
@@ -19,8 +19,9 @@
 {% elif nav_item.children and nav_item.children | length > 0 %}
   {% set title = title | default(nav_item.title) %}
   {% if nav_item.title == config.extra.docs_key %}
-    <li class="md-tabs__item">{{nav_item.title}}
-      <ul class="md-tabs__list">
+    <li class="md-tabs__item md-tabs_csr">
+      <a class="md-tabs__link md-tabs__link--active">{{nav_item.title}}</a>
+      <ul class="md-tabs__list md-sub-tabs_bn">
         {% for versions_nav_item in nav_item.children %}
           {% set versions_title = versions_title | default(versions_nav_item.title) %}
           <!-- Recurse, if the first item has nested items -->
@@ -41,19 +42,17 @@
     {% else %}
     <li class="md-tabs__item">
       {% if nav_item.active %}
-      <a
-              href="{{ (nav_item.children | first).url | url }}"
-              class="md-tabs__link md-tabs__link--active"
-      >
-        {% if title == config.extra.docs_key %} {{versions_title}} {% else %} {{ title }} {% endif %}
-      </a>
+        {% if title == config.extra.docs_key %}
+          <a href="{{ (nav_item.children | first).url | url }}" class="md-tabs__link md-sub-tabs__link--active">{{versions_title}}</a>
+        {% else %}
+          <a href="{{ (nav_item.children | first).url | url }}" class="md-tabs__link md-tabs__link--active">{{ title }}</a>
+        {% endif %}
       {% else %}
-      <a
-              href="{{ (nav_item.children | first).url | url }}"
-              class="md-tabs__link"
-      >
-        {% if title == config.extra.docs_key %} {{versions_title}} {% else %} {{ title }} {% endif %}
-      </a>
+        {% if title == config.extra.docs_key %}
+          <a href="{{ (nav_item.children | first).url | url }}" class="md-tabs__link">{{versions_title}}</a>
+        {% else %}
+          <a href="{{ (nav_item.children | first).url | url }}" class="md-sub-tabs_link">{{ title }}</a>
+        {% endif %}
       {% endif %}
     </li>
     {% endif %}
