--- a/en-us/css/dropdown.css
+++ b/en-us/css/dropdown.css
@@ -1,48 +1,93 @@
-.list-menu{
-    display: flex;
-    background: #f7f7f7;
-    border-radius: 5px;
-    padding: 10px 0;
-    justify-content: space-around;
-    color: #205D67;
-    width: 80%;
+
+.md-tabs_csr {
+    cursor: pointer;
+    position: relative;
+    height: 4.5rem;
 }
 
-.list-menu li{
-    list-style: none;
+.md-sub-tabs_bn {
+    display: none;
+    position: absolute;
+    top: 1.8rem;
+    left: 1rem;
 }
 
-.list-menu li:hover > ul{
-    box-shadow: 0 0 10px #ccc;
+.md-tabs_csr:hover .md-sub-tabs_bn {
     display: block;
 }
 
-.list-menu li ul{
-    position: absolute;
-    display: none;
-    background: #fff;
-    border:1px #f7f7f7 solid;
-    border-radius: 5px;
-    width: 10%;
-    margin: 0;
-    padding: 0;
-    color:#205D67;
-    font-size: 0.9rem;
+.md-sub-tabs_link {
+    display: block;
+    margin-top: .5rem;
+    font-size: .7rem;
+    opacity: .7;
+    transition: transform 400ms cubic-bezier(0.1, 0.7, 0.1, 1), opacity 250ms;
 }
 
-.list-menu li ul a{
-    text-decoration: none;
-    color:#205D67;
+.md-sub-tabs_link:hover {
+    color: inherit;
+    opacity: 1;
 }
 
-.list-menu li ul a li{
-    line-height: 30px;
-    padding-left:10%;
-    box-sizing: border-box;
+.text-center {
+    text-align: center;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    font-family: 'Lato', sans-serif;
+    font-size: 23px;
+    font-weight: 300;
+    padding-bottom: 10px;
+    margin-top: 15px;
+}
+
+.bottom-hr {
+    margin-top: 30px;
     width: 100%;
+    display: flex;
+    max-width: 61rem;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 0 .2rem;
 }
 
-.list-menu li ul a li:hover{
-    background: #f7f7f7;
-    cursor: pointer;
+.feature-item {
+    flex: 1;
+    min-width: 0;
+    display: flex;
+}
+
+.feature-item {
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    box-sizing: border-box;
+    padding: 15px;
+    word-break: break-all
+}
+
+.feature-right {
+    /* background-color: aqua; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 10px;
+}
+
+.feature-title {
+    display: block;
+    font-size: 1.5em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+.feature-detail {
+    color: #999;
+    font-size: 13px;
+}
+
+.mt35 {
+    margin-top: 35px;
 }
