--- a/material/partials/language-change.html
+++ b/material/partials/language-change.html
@@ -9,10 +9,10 @@
     translate.addEventListener('click', changeHref, false);
     function changeHref() {
         if (window.location.href.search('en-us') !== -1) {
-            var changeHref = window.location.href.replace('en-us', 'zh-cn');
+            var changeHref = window.location.href.replace('en_us', 'zh_cn');
 
         } else {
-            var changeHref = window.location.href.replace('zh-cn', 'en-us');
+            var changeHref = window.location.href.replace('zh_cn', 'en_us');
         }
         window.location.href = changeHref
     }
