remove _nav.scss, move customized style into _styles_propert.scss

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -17,10 +17,21 @@ assets/scss/_styles_project.scss
   display: inline;
   margin-left: 10px;
   line-height: 40px;
-  float:left
+  float: left
 }
 
 #my-footer img {
   max-width: 6rem;
   max-height: 2.5rem;
+}
+
+.navbar-brand {
+  svg {
+    display: inline-block;
+    margin-right: 20px !important;
+    margin-left: 5px !important;
+    margin-top: 0px !important;
+    margin-bottom: 5px !important;
+    height: 25px !important;
+  }
 }
