--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,40 +2,7 @@
     <main id="main">
       <div>
        <h1 id="title">Not found</h1>
-          <p>Oops! aaa This page doesn't exist. Try going back to our <a href="{{ "/" | relURL }}">home page</a>.</p>
+          <p>Oops! This page doesn't exist. Try going back to our <a href="{{ "/" | relURL }}">home page</a>.</p>
       </div>
     </main>
-
-<script>
-    var originalHref = window.location.href;
-    if (originalHref.indexOf("docs/user/") > -1) {
-        window.location.href = newHref("docs/user/", "docs/v2.7/user/");
-    } else if (originalHref.indexOf("docs/dev/") > -1) {
-        window.location.href = newHref("docs/dev/", "docs/v2.7/dev/");
-    } else if (originalHref.indexOf("docs/admin/") > -1) {
-        window.location.href = newHref("docs/admin/", "docs/v2.7/admin/");
-    } else if (originalHref.indexOf("docs/source_code_guide/") > -1) {
-        window.location.href = newHref("docs/source_code_guide/", "docs/v2.7/dev/source/");
-    } else if (originalHref.indexOf("docs/developers/") > -1) {
-        window.location.href = newHref("docs/developers/", "contribution-guidelines/");
-    } else if (originalHref.indexOf("blog/index.html") >-1) {
-        window.location.href = newHref("blog/index.html", "blog/2018/08/07/dubbo-101/");
-    } else {
-        // window.location.href = "http://dubbo.apache.org/en-us/";
-    }
-
-    function newHref(path, newPath) {
-        var idx = originalHref.indexOf(path);
-        var part1 = originalHref.substring(0, idx);
-        var part2 = "";
-        if (idx + path.length < originalHref.length -1) {
-            part2 = originalHref.substring(idx + path.length);
-        }
-        var newHref = part1 + newPath + part2;
-        if (newHref.endsWith('.html')) {
-            newHref = newHref.substr(0, newHref.length - 5) + "/";
-        }
-        return newHref;
-    }
-</script>
 {{ end }}
