Optimize sidebar nav active style (#814)

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -35,3 +35,10 @@ assets/scss/_styles_project.scss
     height: 25px !important;
   }
 }
+.td-sidebar-nav {
+  a {
+    &.active {
+      color: $sidebar-nav-active;
+    }
+  }
+}
