--- a/layouts/partials/hooks/body-end.html
+++ b/layouts/partials/hooks/body-end.html
@@ -1,16 +1,9 @@
 {{ with .Site.Params.algolia_docsearch }}
-<script src="https://cdn.jsdelivr.net/npm/docsearch.js@2.6.3/dist/cdn/docsearch.min.js"></script>
-<script>
-  docsearch({
-    // Your apiKey and indexName will be given to you once
-    // we create your config
-    apiKey: '38eff7758162fbf70f2b8484932e62ae',
+<script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>
+<script type="text/javascript">docsearch({
+    container: '.td-search-input',
+    appId: 'BVDW4O6RT8',
+    apiKey: 'ac93e2697aa2f34e154cb3f0a3a069ae',
     indexName: 'apache_dubbo',
-    // Replace inputSelector with a CSS selector
-    // matching your search input
-    inputSelector: '.td-search-input',
-    // Set debug to true to inspect the dropdown
-    debug: false,
-  });
-</script>
+});</script>
 {{ end }}
