--- a/layouts/partials/hooks/body-end.html
+++ b/layouts/partials/hooks/body-end.html
@@ -1,9 +1,17 @@
 {{ with .Site.Params.algolia_docsearch }}
 <script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>
-<script type="text/javascript">docsearch({
-    container: '.td-search-input',
-    appId: 'BVDW4O6RT8',
-    apiKey: 'ac93e2697aa2f34e154cb3f0a3a069ae',
-    indexName: 'apache_dubbo',
-});</script>
+<script>
+    docsearch({
+        // Your apiKey and indexName will be given to you once
+        // we create your config
+        appId: 'BVDW4O6RT8',
+        apiKey: 'ac93e2697aa2f34e154cb3f0a3a069ae',
+        indexName: 'apache_dubbo',
+        // Replace inputSelector with a CSS selector
+        // matching your search input
+        container: '#docsearch',
+        // Set debug to true to inspect the dropdown
+        debug: false,
+    });
+</script>
 {{ end }}
