--- a/layouts/partials/hooks/body-end.html
+++ b/layouts/partials/hooks/body-end.html
@@ -9,7 +9,7 @@
         indexName: 'apache_dubbo',
         // Replace inputSelector with a CSS selector
         // matching your search input
-        container: '#docsearch',
+        container: '#docsearch123',
         // Set debug to true to inspect the dropdown
         debug: false,
     });
