Add algolia search

--- a/layouts/partials/hooks/body-end.html
+++ b/layouts/partials/hooks/body-end.html
@@ -4,12 +4,24 @@
     docsearch({
         // Your apiKey and indexName will be given to you once
         // we create your config
-        appId: 'BVDW4O6RT8',
-        apiKey: 'ac93e2697aa2f34e154cb3f0a3a069ae',
+        appId: 'BH4D9OD16A',
+        apiKey: '38eff7758162fbf70f2b8484932e62ae',
         indexName: 'apache_dubbo',
         // Replace inputSelector with a CSS selector
         // matching your search input
-        container: '#docsearch123',
+        container: '#docsearch',
+        // Set debug to true to inspect the dropdown
+        debug: false,
+    });
+    docsearch({
+        // Your apiKey and indexName will be given to you once
+        // we create your config
+        appId: 'BH4D9OD16A',
+        apiKey: '38eff7758162fbf70f2b8484932e62ae',
+        indexName: 'apache_dubbo',
+        // Replace inputSelector with a CSS selector
+        // matching your search input
+        container: '#docsearch_zh_home',
         // Set debug to true to inspect the dropdown
         debug: false,
     });
