--- a/layouts/partials/hooks/body-end.html
+++ b/layouts/partials/hooks/body-end.html
@@ -4,8 +4,8 @@
     docsearch({
         // Your apiKey and indexName will be given to you once
         // we create your config
-        appId: 'BH4D9OD16A',
-        apiKey: '38eff7758162fbf70f2b8484932e62ae',
+        appId: 'L5F4T9F0I1',
+        apiKey: '364ae307e1da9d02b2335675e9db1eb1',
         indexName: 'apache_dubbo',
         // Replace inputSelector with a CSS selector
         // matching your search input
@@ -16,8 +16,8 @@
     docsearch({
         // Your apiKey and indexName will be given to you once
         // we create your config
-        appId: 'BH4D9OD16A',
-        apiKey: '38eff7758162fbf70f2b8484932e62ae',
+        appId: 'L5F4T9F0I1',
+        apiKey: '364ae307e1da9d02b2335675e9db1eb1',
         indexName: 'apache_dubbo',
         // Replace inputSelector with a CSS selector
         // matching your search input
