--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -32,12 +32,13 @@
   <div class="text-center" id="my-footer">
     <img style="float:left;" src="/imgs/apache_logo.png"/>
     <ul>
-      <li><a href="http://www.apache.org">Foundation</a></li>
-      <li><a href="http://www.apache.org/licenses/">License</a></li>
+      <li><a href="https://www.apache.org">Foundation</a></li>
+      <li><a href="https://www.apache.org/licenses/">License</a></li>
       <li><a href="https://www.apache.org/security/">Security</a></li>
-      <li><a href="http://www.apache.org/events/current-event">Events</a></li>
-      <li><a href="http://www.apache.org/foundation/sponsorship.html">Sponsorship</a></li>
-      <li><a href="http://www.apache.org/foundation/thanks.html">Thanks</a></li>
+      <li><a href="https://www.apache.org/events/current-event">Events</a></li>
+      <li><a href="https://www.apache.org/foundation/sponsorship.html">Sponsorship</a></li>
+      <li><a href="https://privacy.apache.org/policies/privacy-policy-public.html">Privacy</a></li>
+      <li><a href="https://www.apache.org/foundation/thanks.html">Thanks</a></li>
     </ul>
   </div>
   </div>
